--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="board"></div>
+    <div class="board-container">
+        <div id="board"></div>
+        <div class="block-score">
+            <div class="score">
+                <div class="hit"> Попадания:
+                    <span class="luck">0</span>
+                </div>
+                <div class="miss"> Промахи:
+                    <span class="fail">0</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <script src="../src/js/app.js" type="module"></script>
 </body>
 </html>
